mxslc/tests/data/error/bad_data_type_2.mxsl
float a = image(10);